src/test/ui/unique-pinned-nocopy.stderr
error[E0599]: no method named `clone` found for type `std::boxed::Box<R>` in the current scope
  --> $DIR/unique-pinned-nocopy.rs:12:16
   |
LL |     let _j = i.clone();
   |                ^^^^^
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `std::boxed::Box<R> : std::clone::Clone`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
